--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body{
     
     margin:0px;
     padding:0px;
+    padding-bottom:40px;
     overflow: hidden;
     
 }
@@ -31,7 +32,7 @@ nav{
     width:1232px ;
     height: 80px;
     top:18px;
-   margin-left:104px;
+   margin-left:4px;
   border-radius: 20px;
     border:0.5px solid black;
 }
@@ -179,6 +180,7 @@ margin-bottom:40px;
 #trends-text{
     display:flex;
     align-items: center;
+    /* padding-right:120px; */
     /* justify-content: space-between; */
     gap:1230px
 }
@@ -186,6 +188,8 @@ margin-bottom:40px;
     width:141px;
     padding-top:2px;
     padding-bottom:2px;
+    margin-left:-20px;
+
     border-radius:5px;
     height: 33px;
     font-family:lato,sans-serif;
@@ -200,6 +204,8 @@ margin-bottom:40px;
     display:grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     row-gap: 25px;
+    padding:40px;
+    padding-left:80px;
 }
 #genre-two{
     width:1,440px;
@@ -223,13 +229,325 @@ margin-bottom:40px;
     box-shadow:10px 10px 5px rgba(112, 144, 176, 0.2);
     
 }
+#section-three{
+    width:1,440px;
+    height:590px;
+    margin-top: 174px;
+
+}
+#genre-three{
+     width:1,440px;
+    display:flex;
+    justify-content:space-between;
+    gap:25px;
+    height:296px;
+}
+#genre-five{
+    width:1,440px;
+    display:flex;
+    justify-content:space-between;
+    gap:25px;
+    height:296px;
+}
+#fourth-section{
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #DAA521;
+    width:1,440px;
+    height:572px;
+}
+#golden-image{
+ width:639px;
+ 
+    height:572px;
+
+}
+#image-png{
+    width:639px;
+    height:402px;
+    /* margin-top:40px; */
+   
+}
+#price{
+    width:1184px;
+    height:908px;
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-left:128px;
+    margin-top:42px;
+
+}
+#group28{
+    position:relative;
+    width:320px;
+    height: 528px;
+    box-shadow:5px 5px 4px rgba(12, 194, 255,0.1) ;
+}
+#basic{
+    position:absolute;
+    top:3240px;
+    left:220px;
+    font-family:lato,sans-serif;
+    font-weight: 700px;
+    font-style:bold;
+    font-size:48px;
+    line-height: 100%;
+    color:#228EE5;
+}
+#months{
+    position:absolute;
+    top:3320px;
+    left:230px;
+    font-family: lato,sans-serif;
+    font-weight: 500px;
+    font-style:medium;
+    font-size:24px;
+    line-height: 100%;
+    color:#228EE5;
+}
+#price-tag{
+    position:absolute;
+    top:3440px;
+    left:190px;
+    font-family:lato,sans-serif;
+    font-weight: 700px;
+    font-style:bold;
+    font-size:48px;
+    line-height: 100%;
+    color:#228EE5;
+}
+#price-list{
+list-style:circle;
+}
+#cancel-time{
+    position:absolute;
+    top:3540px;
+    left:220px;
+    font-family: lato,sans-serif;
+    font-weight:500px;
+    font-style:medium;
+    font-size:16px;
+    line-height: 100%;
+    color:#228EE5
+}
+#continue{
+    position:absolute;
+    top:3630px;
+    left:200px;
+    width:156px;
+    height:40px;
+    border-radius: 40px;
+    background-color: #228EE5;
+    border:1px solid #228EE5;
+    padding:10px;
+    color:white;
+}
+.sugessted{
+    position:relative;
+    width:400px;
+    height:808px;
+    
+    box-shadow:5px 5px 4px rgba(12, 194, 255,0.1);
+}
+.suggestion{
+      /* position:absolute;
+    top:340px;
+    left:220px; */
+    position:absolute;
+    top:3210px;
+    left:610px;
+    font-family:lato,sans-serif;
+    font-weight: 700px;
+    font-style:bold;
+    font-size:48px;
+    line-height: 100%;
+    color:#ffffff;
+}
+#months6{
+ position:absolute;
+    top:3300px;
+    left:660px;
+    font-family: lato,sans-serif;
+    font-weight: 500px;
+    font-style:medium;
+    font-size:24px;
+    line-height: 100%;
+    color:#ffffff;
+}
+#first-price-tag{
+     position:absolute;
+    top:3380px;
+    left:630px;
+    font-family:lato,sans-serif;
+    font-weight: 700px;
+    font-style:bold;
+    font-size:48px;
+    line-height: 100%;
+    color:#ffffff;
+}
+#second-price-tag{
+     position:absolute;
+    top:3470px;
+    left:630px;
+    font-family:lato,sans-serif;
+    font-weight: 700px;
+    font-style:bold;
+    font-size:48px;
+    line-height: 100%;
+    color:white;
+}
+#months-price{
+     position:absolute;
+    top:3580px;
+    left:668px;
+    font-family: lato,sans-serif;
+    font-weight:500px;
+    font-style:medium;
+    font-size:16px;
+    line-height: 100%;
+    color:#ffffff;
+}
+.continue{
+     position:absolute;
+    top:3650px;
+    left:630px;
+    width:156px;
+    height:40px;
+    border-radius: 40px;
+    background-color:white;
+    border:1px solid #228EE5;
+    padding:10px;
+    color:#228EE5;
+}
+
+#premium-text{
+    position:absolute;
+    top:3240px;
+    left:1046px;
+    font-family:lato,sans-serif;
+    font-weight: 700px;
+    font-style:bold;
+    font-size:48px;
+    line-height: 100%;
+    color:#228EE5;
+}
+#month12{
+    position:absolute;
+    top:3320px;
+    left:1080px;
+    font-family: lato,sans-serif;
+    font-weight: 500px;
+    font-style:medium;
+    font-size:24px;
+    line-height: 100%;
+    color:#228EE5;
+}
+#premium-price{
+    position:absolute;
+    top:3440px;
+    left:1060px;
+    font-family:lato,sans-serif;
+    font-weight: 700px;
+    font-style:bold;
+    font-size:48px;
+    line-height: 100%;
+    color:#228EE5;
+}
+#premium-list{
+    position:absolute;
+    top:3540px;
+    left:1099px;
+    font-family: lato,sans-serif;
+    font-weight:500px;
+    font-style:medium;
+    font-size:16px;
+    line-height: 100%;
+    color:#228EE5
+}
+#premuim-button{
+    position:absolute;
+    top:3630px;
+    left: 1065px;
+    width:156px;
+    height:40px;
+    border-radius: 40px;
+    background-color: #228EE5;
+    border:1px solid #228EE5;
+    padding:10px;
+    color:white;
+}
+#ccollections{
+      width:1,440px;
+    height: 386px;
+    display:flex;
+    flex-direction:column;
+    /* align-items:center; */
+    justify-content: space-between;
+
+}
+#buttons-space{
+    display:flex;
+    justify-content: space-between;
+    padding:80px;
+    align-items: center;
+}
+#collection-genre{
+    width:1,440px;
+    display:flex;
+    justify-content:space-between;
+    gap:25px;
+    height:296px;
+}
+#collection-text{
+    font-family:lato,sans-serif;
+    font-weight:700px;
+    font-style: bold;
+    font-size:48px;
+    line-height: 100%;
+    margin-left: 64px;
+    color:#EBFAFF;
+    text-decoration: capitalize;
+}
+#buttons{
+    display:flex;
+    justify-content: space-between;
+    width:169px;
+    height:48px;
+    border-radius: 38px;
+    /* border: 1px solid rgb(69, 69, 201); */
+    background-color: #030A1B;
+}
+.button-one{
+    background-color: #030A1B;
+    border:none;
+    color:#ffffff;
+    height: 48px;
+}
+.button-two{
+    background-color: #030A1B;
+    border:none;
+    color:#ffffff;
+    height: 48px;
+}
+.button-click{
+    width:84.5px;
+    height:48px;
+    border-radius: 38px;
+    background-color: #228EE5;
+    color:white;
+    border:none;
+}
+
+
 
 @media screen and (max-width: 600px) {
   
    body{
     background-color: #030A1B;
-    margin:0px;
-    padding:0px;
+    /* margin:0px;
+    padding:0px; */
 }
 nav{
     background:none;
@@ -378,4 +696,30 @@ padding-top:23px;
     margin-top:-32px;
     color:#ffffff;
 }
+#trends-text{
+    display:flex;
+    align-items: center;
+    gap:120px
+}
+#genres{
+    padding:20px;
+}
+#see-more{
+    width:87px;
+    height:23px;
+    margin-left:- 1310px;
+    font-family:lato,sans-serif;
+    font-weight:700px;
+    font-style:bold;
+    font-size:16px;
+    line-height: 100%;
+}
+#see-more-section{
+    display:grid;
+    grid-template-columns:  1fr;
+    row-gap:49px;
+    margin-left:50px;
+    padding:30px;
+}
+
 }
